--- a/Mission_to_Mars/mission_to_mars.ipynb
+++ b/Mission_to_Mars/mission_to_mars.ipynb
@@ -15,7 +15,7 @@
    },
    "outputs": [],
    "source": [
-    "# Dependency\n",
+    "# Dependencies\n",
     "from splinter import Browser\n",
     "from bs4 import BeautifulSoup as bs\n",
     "import pandas as pd"
