--- a/Mission_to_Mars/mission_to_mars.ipynb
+++ b/Mission_to_Mars/mission_to_mars.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,9 +55,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------\n",
+      "My Culture, My Voice\n",
+      "In honor of Hispanic Heritage Month, Christina Hernandez, an instrument engineer on the Mars 2020 mission, talks about her childhood and journey to NASA.\n"
+     ]
+    }
+   ],
    "source": [
     "# HTML object\n",
     "html = browser.html\n",
@@ -90,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,9 +111,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.jpl.nasa.gov/spaceimages/images/wallpaper/PIA16726-1920x1200.jpg'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# HTML object\n",
     "img_html = browser.html\n",
@@ -137,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,9 +168,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>description</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Equatorial Diameter:</td>\n",
+       "      <td>6,792 km</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Polar Diameter:</td>\n",
+       "      <td>6,752 km</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mass:</td>\n",
+       "      <td>6.39 × 10^23 kg (0.11 Earths)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Moons:</td>\n",
+       "      <td>2 (Phobos &amp; Deimos)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Orbit Distance:</td>\n",
+       "      <td>227,943,824 km (1.38 AU)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Orbit Period:</td>\n",
+       "      <td>687 days (1.9 years)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Surface Temperature:</td>\n",
+       "      <td>-87 to -5 °C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>First Record:</td>\n",
+       "      <td>2nd millennium BC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Recorded By:</td>\n",
+       "      <td>Egyptian astronomers</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            description                          value\n",
+       "0  Equatorial Diameter:                       6,792 km\n",
+       "1       Polar Diameter:                       6,752 km\n",
+       "2                 Mass:  6.39 × 10^23 kg (0.11 Earths)\n",
+       "3                Moons:            2 (Phobos & Deimos)\n",
+       "4       Orbit Distance:       227,943,824 km (1.38 AU)\n",
+       "5         Orbit Period:           687 days (1.9 years)\n",
+       "6  Surface Temperature:                   -87 to -5 °C\n",
+       "7         First Record:              2nd millennium BC\n",
+       "8          Recorded By:           Egyptian astronomers"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Use Pandas to scrape data\n",
     "table = pd.read_html(mars_facts_url)\n",
@@ -162,9 +276,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>description</th>\\n      <th>value</th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>0</th>\\n      <td>Equatorial Diameter:</td>\\n      <td>6,792 km</td>\\n    </tr>\\n    <tr>\\n      <th>1</th>\\n      <td>Polar Diameter:</td>\\n      <td>6,752 km</td>\\n    </tr>\\n    <tr>\\n      <th>2</th>\\n      <td>Mass:</td>\\n      <td>6.39 × 10^23 kg (0.11 Earths)</td>\\n    </tr>\\n    <tr>\\n      <th>3</th>\\n      <td>Moons:</td>\\n      <td>2 (Phobos &amp; Deimos)</td>\\n    </tr>\\n    <tr>\\n      <th>4</th>\\n      <td>Orbit Distance:</td>\\n      <td>227,943,824 km (1.38 AU)</td>\\n    </tr>\\n    <tr>\\n      <th>5</th>\\n      <td>Orbit Period:</td>\\n      <td>687 days (1.9 years)</td>\\n    </tr>\\n    <tr>\\n      <th>6</th>\\n      <td>Surface Temperature:</td>\\n      <td>-87 to -5 °C</td>\\n    </tr>\\n    <tr>\\n      <th>7</th>\\n      <td>First Record:</td>\\n      <td>2nd millennium BC</td>\\n    </tr>\\n    <tr>\\n      <th>8</th>\\n      <td>Recorded By:</td>\\n      <td>Egyptian astronomers</td>\\n    </tr>\\n  </tbody>\\n</table>'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Convert the Dataframe to HTML\n",
     "html_table = facts_df.to_html()\n",
@@ -175,9 +300,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<table border=\"1\" class=\"dataframe\">  <thead>    <tr style=\"text-align: right;\">      <th></th>      <th>description</th>      <th>value</th>    </tr>  </thead>  <tbody>    <tr>      <th>0</th>      <td>Equatorial Diameter:</td>      <td>6,792 km</td>    </tr>    <tr>      <th>1</th>      <td>Polar Diameter:</td>      <td>6,752 km</td>    </tr>    <tr>      <th>2</th>      <td>Mass:</td>      <td>6.39 × 10^23 kg (0.11 Earths)</td>    </tr>    <tr>      <th>3</th>      <td>Moons:</td>      <td>2 (Phobos &amp; Deimos)</td>    </tr>    <tr>      <th>4</th>      <td>Orbit Distance:</td>      <td>227,943,824 km (1.38 AU)</td>    </tr>    <tr>      <th>5</th>      <td>Orbit Period:</td>      <td>687 days (1.9 years)</td>    </tr>    <tr>      <th>6</th>      <td>Surface Temperature:</td>      <td>-87 to -5 °C</td>    </tr>    <tr>      <th>7</th>      <td>First Record:</td>      <td>2nd millennium BC</td>    </tr>    <tr>      <th>8</th>      <td>Recorded By:</td>      <td>Egyptian astronomers</td>    </tr>  </tbody></table>'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Strip unwanted newlines to clean up the table\n",
     "html_table.replace('\\n', '')"
@@ -192,116 +328,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'img_url': 'https://astrogeology.usgs.gov//cache/images/f5e372a36edfa389625da6d0cc25d905_cerberus_enhanced.tif_full.jpg',\n",
+       "  'img_title': 'Cerberus Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://astrogeology.usgs.gov//cache/images/3778f7b43bbbc89d6e3cfabb3613ba93_schiaparelli_enhanced.tif_full.jpg',\n",
+       "  'img_title': 'Schiaparelli Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://astrogeology.usgs.gov//cache/images/555e6403a6ddd7ba16ddb0e471cadcf7_syrtis_major_enhanced.tif_full.jpg',\n",
+       "  'img_title': 'Syrtis Major Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://astrogeology.usgs.gov//cache/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg',\n",
+       "  'img_title': 'Valles Marineris Hemisphere Enhanced'}]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Access and visit the USGS Astrogeology site\n",
-    "mars_hemi = 'https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars'\n",
-    "browser.visit(mars_hemi)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Search for hemisphere titleshtml = browser.html\n",
-    "soup = bs(html, 'html.parser')\n",
+    "mars_hemis_url = 'https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars'\n",
+    "browser.visit(mars_hemis_url)\n",
+    "xpath = '//div//a[@class=\"itemLink product-item\"]/img'\n",
     "\n",
-    "hemi_names = []\n",
+    "# Use splinter to Click the image to bring up the full resolution image\n",
+    "results = browser.find_by_xpath(xpath)\n",
     "\n",
-    "# Search for the names of all four hemispheres\n",
-    "results = soup.find_all('div', class_=\"collapsible results\")\n",
-    "hemispheres = results[0].find_all('h3')\n",
-    "\n",
-    "# Get text and store in list\n",
-    "for name in hemispheres:\n",
-    "    hemi_names.append(name.text)\n",
-    "\n",
-    "hemi_names"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Click through thumbnails to get full-sized hemisphere images\n",
-    "thumbnail_results = results[0].find_all('a')\n",
-    "thumbnail_links = []\n",
-    "\n",
-    "for thumbnail in thumbnail_results:\n",
-    "    \n",
-    "    # If the thumbnail element has an image...\n",
-    "    if (thumbnail.img):\n",
-    "        \n",
-    "        # then grab the attached link\n",
-    "        thumbnail_url = 'https://astrogeology.usgs.gov/' + thumbnail['href']\n",
-    "        \n",
-    "        # Append list with links\n",
-    "        thumbnail_links.append(thumbnail_url)\n",
-    "\n",
-    "thumbnail_links"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Extract image source of full-sized image\n",
-    "full_imgs = []\n",
-    "\n",
-    "for url in thumbnail_links:\n",
-    "    \n",
-    "    # Click through each thumbanil link\n",
-    "    browser.visit(url)\n",
-    "    \n",
-    "    html = browser.html\n",
-    "    soup = bs(html, 'html.parser')\n",
-    "    \n",
-    "    # Scrape each page for the relative image path\n",
-    "    results = soup.find_all('img', class_='wide-image')\n",
-    "    relative_img_path = results[0]['src']\n",
-    "    \n",
-    "    # Combine the reltaive image path to get the full url\n",
-    "    img_link = 'https://astrogeology.usgs.gov/' + relative_img_path\n",
-    "    \n",
-    "    # Add full image links to a list\n",
-    "    full_imgs.append(img_link)\n",
-    "\n",
-    "full_imgs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Zip together the list of hemisphere names and hemisphere image links\n",
-    "mars_hemi_zip = zip(hemi_names, full_imgs)\n",
-    "\n",
+    "# Initiate hemisphere_image_urls list\n",
     "hemisphere_image_urls = []\n",
     "\n",
-    "# Iterate through the zipped object\n",
-    "for title, img in mars_hemi_zip:\n",
+    "# Loop over results to get image data\n",
+    "for i in range(len(results)):\n",
+    "    img = results[i]\n",
+    "            \n",
+    "    img.click()\n",
     "    \n",
-    "    mars_hemi_dict = {}\n",
+    "    # Scrape the browser into soup and use soup to find the full resolution image of mars\n",
+    "    # Save the image url to a variable called `img_url`\n",
+    "    mars_usgs_html = browser.html\n",
+    "    soup = bs(mars_usgs_html, 'html.parser')\n",
+    "    partial_img_url = soup.find(\"img\", class_=\"wide-image\")[\"src\"]\n",
     "    \n",
-    "    # Add hemisphere title to dictionary\n",
-    "    mars_hemi_dict['title'] = title\n",
+    "    img_url = 'https://astrogeology.usgs.gov/' + partial_img_url\n",
     "    \n",
-    "    # Add image url to dictionary\n",
-    "    mars_hemi_dict['img_url'] = img\n",
+    "    # Scrape the browser into soup and use soup to find the title of the image\n",
+    "    # Save the image's title to a variable called `img_title`\n",
+    "    img_title = soup.find('h2', class_=\"title\").text\n",
     "    \n",
-    "    # Append the list with dictionaries\n",
-    "    hemisphere_image_urls.append(mars_hemi_dict)\n",
+    "    # Get the data into a dictionary\n",
+    "    img_dict = {\n",
+    "        'img_url': img_url,\n",
+    "        'img_title': img_title\n",
+    "    }\n",
+    "    # Append image dictionaries to the list\n",
+    "    hemisphere_image_urls.append(img_dict)\n",
     "\n",
+    "    browser.back()\n",
+    "    results = browser.find_by_xpath(xpath)\n",
+    "    i = i + 1\n",
+    "    \n",
+    "# Display hemispheres' images list\n",
     "hemisphere_image_urls"
    ]
   }
