web page completed

--- a/Mission_to_Mars/mission_to_mars.ipynb
+++ b/Mission_to_Mars/mission_to_mars.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -28,7 +28,7 @@
    "outputs": [],
    "source": [
     "# Create Splinter browser\n",
-    "executable_path = {'executable_path': 'chromedriver.exe'}\n",
+    "executable_path = {\"executable_path\": \"c:/bin/chromedriver\"}\n",
     "browser = Browser('chrome', **executable_path, headless=False)"
    ]
   },
@@ -63,8 +63,8 @@
      "output_type": "stream",
      "text": [
       "------------\n",
-      "My Culture, My Voice\n",
-      "In honor of Hispanic Heritage Month, Christina Hernandez, an instrument engineer on the Mars 2020 mission, talks about her childhood and journey to NASA.\n"
+      "NASA's New Mars Rover Will Use X-Rays to Hunt Fossils\n",
+      "PIXL, an instrument on the end of the Perseverance rover's arm, will search for chemical fingerprints left by ancient microbes.\n"
      ]
     }
    ],
@@ -75,13 +75,16 @@
     "# Parse HTML with BeautifulSoup\n",
     "soup = bs(html, 'html.parser')\n",
     "\n",
+    "# Parse HTML with BeautifulSoup\n",
+    "soup = bs(html, 'html.parser')\n",
+    "\n",
     "# Retrieve all elements that contain news title\n",
     "latest_news = soup.find_all('div', class_=\"list_text\")\n",
     "\n",
     "# Get the latest news    \n",
     "news = latest_news[0]\n",
     "\n",
-    "# Use BeautifulSoup'find() method to navigate and retrieve attributes\n",
+    "# Use BeautifulSoup' find() method to navigate and retrieve attributes\n",
     "news_title = news.find('div', class_=\"content_title\").text\n",
     "news_p = news.find('div', class_=\"article_teaser_body\").text\n",
     "\n",
@@ -117,7 +120,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://www.jpl.nasa.gov/spaceimages/images/wallpaper/PIA16726-1920x1200.jpg'"
+       "'https://www.jpl.nasa.gov/spaceimages/images/wallpaper/PIA18328-1920x1200.jpg'"
       ]
      },
      "execution_count": 6,
@@ -131,9 +134,6 @@
     "\n",
     "# Parse HTML with BeautifulSoup\n",
     "soup = bs(img_html, 'html.parser')\n",
-    "\n",
-    "#full_click=browser.find_by_id('full_image')\n",
-    "#full_click.click()\n",
     "\n",
     "# Retrieve Featured Mars Image url from style tag \n",
     "featured_image_url  = soup.find('article')['style'].replace('background-image: url(','').replace(');', '')[1:-1]\n",
@@ -328,23 +328,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'img_url': 'https://astrogeology.usgs.gov//cache/images/f5e372a36edfa389625da6d0cc25d905_cerberus_enhanced.tif_full.jpg',\n",
-       "  'img_title': 'Cerberus Hemisphere Enhanced'},\n",
-       " {'img_url': 'https://astrogeology.usgs.gov//cache/images/3778f7b43bbbc89d6e3cfabb3613ba93_schiaparelli_enhanced.tif_full.jpg',\n",
-       "  'img_title': 'Schiaparelli Hemisphere Enhanced'},\n",
-       " {'img_url': 'https://astrogeology.usgs.gov//cache/images/555e6403a6ddd7ba16ddb0e471cadcf7_syrtis_major_enhanced.tif_full.jpg',\n",
-       "  'img_title': 'Syrtis Major Hemisphere Enhanced'},\n",
-       " {'img_url': 'https://astrogeology.usgs.gov//cache/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg',\n",
-       "  'img_title': 'Valles Marineris Hemisphere Enhanced'}]"
+       "[{'title': 'Cerberus Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astrogeology.usgs.gov//cache/images/f5e372a36edfa389625da6d0cc25d905_cerberus_enhanced.tif_full.jpg'},\n",
+       " {'title': 'Schiaparelli Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astrogeology.usgs.gov//cache/images/3778f7b43bbbc89d6e3cfabb3613ba93_schiaparelli_enhanced.tif_full.jpg'},\n",
+       " {'title': 'Syrtis Major Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astrogeology.usgs.gov//cache/images/555e6403a6ddd7ba16ddb0e471cadcf7_syrtis_major_enhanced.tif_full.jpg'},\n",
+       " {'title': 'Valles Marineris Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astrogeology.usgs.gov//cache/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg'}]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,8 +381,8 @@
     "    \n",
     "    # Get the data into a dictionary\n",
     "    img_dict = {\n",
-    "        'img_url': img_url,\n",
-    "        'img_title': img_title\n",
+    "        'title': img_title,\n",
+    "        'img_url': img_url\n",
     "    }\n",
     "    # Append image dictionaries to the list\n",
     "    hemisphere_image_urls.append(img_dict)\n",
@@ -394,6 +394,13 @@
     "# Display hemispheres' images list\n",
     "hemisphere_image_urls"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
